@startuml
!theme plain
hide circle
skinparam linetype ortho

entity "events" {
    *id : BIGINT <<PK>>
    --
    organizer_id : BINARY(16)
    venue_id : BIGINT <<FK>>
    name : VARCHAR(255)
    description : TEXT
    category : VARCHAR(100)
    start_time : DATETIME
    end_time : DATETIME
    event_code: VARCHAR(255)
    logo_url: LONGTEXT
    banner_url: LONGTEXT
    cover_image: LONGTEXT
    custom_url: VARCHAR(255)
    privacy: VARCHAR(50)
    status : VARCHAR(50)
    allow_ticket_transfer : BOOLEAN
    refund_enabled : BOOLEAN
    --
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "event_organizer_info" {
    *id: BIGINT <<PK>>
    --
    event_id: BIGINT <<FK>>
    organizer_code: VARCHAR(255)
    organizer_name: VARCHAR(255)
    logo_url: LONGTEXT
    description: TEXT
    terms_agreed: BOOLEAN
}

entity "event_payout_info" {
  *id: BIGINT <<PK>>
  --
  event_id: BIGINT <<FK>>
  account_holder_name: VARCHAR(255)
  bank_number: VARCHAR(255)
  bank_name: VARCHAR(255)
}

entity "event_invoice_info" {
  *id: BIGINT <<PK>>
  --
  event_id: BIGINT <<FK>>
  enabled: BOOLEAN
  company_name: VARCHAR(255)
  tax_code: VARCHAR(255)
  address: VARCHAR(255)
}

entity "event_showtimes" {
    *id : BIGINT <<PK>>
    --
    event_id : BIGINT <<FK>>
    code: VARCHAR(255)
    start_time : DATETIME
    end_time : DATETIME
}

entity "showtime_ticket_allocations" {
    *id: BIGINT <<PK>>
    --
    showtime_id: BIGINT <<FK>>
    ticket_type_id: BIGINT <<FK>>
    quantity: INT
}

entity "ticket_types" {
    *id : BIGINT <<PK>>
    --
    event_id : BIGINT <<FK>>
    code: VARCHAR(255)
    name : VARCHAR(255)
    price : DECIMAL(10,2)
    quota : INT
    purchase_limit : INT
    start_sale : DATETIME
    end_sale : DATETIME
    description: TEXT
}

entity "ticket_zones" {
    *id: BIGINT <<PK>>
    --
    event_id: BIGINT <<FK>>
    ticket_type_id: BIGINT <<FK>>
    code: VARCHAR(255)
    name: VARCHAR(255)
    check_in_time: DATETIME
}

entity "venues" {
    *id : BIGINT <<PK>>
    --
    name : VARCHAR(255)
    address : VARCHAR(255)
    city : VARCHAR(100)
    capacity : INT
}

events ||..|| event_organizer_info
events ||..|| event_payout_info
events ||..|| event_invoice_info
events ||--o{ event_showtimes
events ||--o{ ticket_types
events ||--o{ ticket_zones
venues ||--o{ events
event_showtimes ||--o{ showtime_ticket_allocations
ticket_types ||--o{ showtime_ticket_allocations
ticket_types ||--o{ ticket_zones
@enduml